--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -60,8 +60,8 @@
     <Compile Include="Framework\ToolsUnity.cs" />
     <Compile Include="Framework\INetInfoBuilder.cs" />
     <Compile Include="Framework\Extensions\LocaleExtensions.cs" />
-    <Compile Include="NewNetwork\MediumOneWay\MediumOneWayBuilder.cs" />
-    <Compile Include="NewNetwork\SmallHighway\SmallHighwayBuilder.cs" />
+    <Compile Include="NewNetwork\OneWay4L\MediumOneWayBuilder.cs" />
+    <Compile Include="NewNetwork\Highway2L\Highway2LBuilder.cs" />
     <Compile Include="OldModBehaviour.cs" />
     <Compile Include="Framework\Debug.cs" />
     <Compile Include="Framework\Extensions\NetInfoExtensions.cs" />
@@ -70,59 +70,59 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ModBehaviour.cs" />
     <Compile Include="Framework\Tools.cs" />
-    <Compile Include="NewNetwork\XLargeHighway\XLargeHighwayBuilder.cs" />
+    <Compile Include="NewNetwork\Highway6L\Highway6LBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NewNetwork\SmallHighway\thumbnails.png">
+    <Content Include="NewNetwork\Highway2L\Ground\Nodes\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Elevated\Nodes\_APRMap.png">
+    <Content Include="NewNetwork\Highway6L\Elevated\Nodes\_APRMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Elevated\Nodes\_MainTex.png">
+    <Content Include="NewNetwork\Highway6L\Elevated\Nodes\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Elevated\Segments\_APRMap.png">
+    <Content Include="NewNetwork\Highway6L\Elevated\Segments\_APRMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Elevated\Segments\_MainTex.png">
+    <Content Include="NewNetwork\Highway6L\Elevated\Segments\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Ground\Nodes\_APRMap.png">
+    <Content Include="NewNetwork\Highway6L\Ground\Nodes\_APRMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Ground\Nodes\_MainTex.png">
+    <Content Include="NewNetwork\Highway6L\Ground\Nodes\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Ground\Segments\_APRMap.png">
+    <Content Include="NewNetwork\Highway6L\Ground\Segments\_APRMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Ground\Segments\_MainTex.png">
+    <Content Include="NewNetwork\Highway6L\Ground\Segments\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Ground\Segments\_XYSMap.png">
+    <Content Include="NewNetwork\Highway6L\Ground\Segments\_XYSMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\infotooltip.png">
+    <Content Include="NewNetwork\Highway6L\infotooltip.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Slope\Nodes\_APRMap.png">
+    <Content Include="NewNetwork\Highway6L\Slope\Nodes\_APRMap.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\Slope\Nodes\_MainTex.png">
+    <Content Include="NewNetwork\Highway6L\Slope\Nodes\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\XLargeHighway\thumbnails.png">
+    <Content Include="NewNetwork\Highway6L\thumbnails.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="NewNetwork\planning_road_2_lanes.png" />
     <Content Include="NewNetwork\play_street.png" />
-    <Content Include="NewNetwork\SmallHighway\Ground\Segments\_MainTex.png">
+    <Content Include="NewNetwork\Highway2L\Ground\Segments\_MainTex.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NewNetwork\XLargeHighway\Tunnel\" />
+    <Folder Include="NewNetwork\Highway6L\Tunnel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
