--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Framework\ToolsUnity.cs" />
     <Compile Include="Framework\INetInfoBuilder.cs" />
     <Compile Include="Framework\Extensions\LocaleExtensions.cs" />
+    <Compile Include="NewNetwork\HighwayHelper.cs" />
     <Compile Include="NewNetwork\OneWay4L\MediumOneWayBuilder.cs" />
     <Compile Include="NewNetwork\Highway2L\Highway2LBuilder.cs" />
     <Compile Include="OldModBehaviour.cs" />
