--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -108,13 +108,13 @@
     <Content Include="NewNetwork\Highway2L\Textures\Elevated_Segment__MainTex.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__AlphaMap.png">
+    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__AlphaMap.dxt.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__MainTex.png">
+    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__MainTex.dxt.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__XYS.png">
+    <Content Include="NewNetwork\Highway2L\Textures\Ground_NodeLOD__XYS.dxt.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="NewNetwork\Highway2L\Textures\Ground_Node__AlphaMap.png">
@@ -153,7 +153,7 @@
     <Content Include="NewNetwork\Highway2L\Textures\Slope_Node__MainTex.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\Highway2L\Textures\Slope_Node__XYS.png">
+    <Content Include="NewNetwork\Highway2L\Textures\Slope_NodeLOD__XYS.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="NewNetwork\Highway2L\Textures\Slope_SegmentLOD__AlphaMap.png">
@@ -234,7 +234,9 @@
     <Content Include="NewNetwork\planning_road_2_lanes.png" />
     <Content Include="NewNetwork\play_street.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NewNetwork\Highway2L\Textures\Test\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>rd /s /q  "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
