--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompatibilityTests\SomeRoads\SomeRoads.cs" />
     <Compile Include="Framework\INetInfoModifier.cs" />
     <Compile Include="Framework\Extensions\EnumExtensions.cs" />
     <Compile Include="Framework\Extensions\ExpressionExtensions.cs" />
@@ -81,6 +82,18 @@
     <Compile Include="NewNetwork\Highway6L\Highway6LBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CompatibilityTests\SomeRoads\planning_road_2_lanes.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CompatibilityTests\SomeRoads\play_street.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CompatibilityTests\SomeRoads\road_small.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CompatibilityTests\SomeRoads\thumbnail_atlas.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewNetwork\Highway1L\Textures\Ground_Node__AlphaMap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
