--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -52,7 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompatibilityTests\SomeRoads\SomeRoads.cs" />
+    <Compile Include="Mod.Loading.cs" />
     <Compile Include="Framework\INetInfoModifier.cs" />
     <Compile Include="Framework\Extensions\EnumExtensions.cs" />
     <Compile Include="Framework\Extensions\ExpressionExtensions.cs" />
@@ -71,7 +71,6 @@
     <Compile Include="NewNetwork\HighwayHelper.cs" />
     <Compile Include="NewNetwork\OneWay4L\OneWay4LBuilder.cs" />
     <Compile Include="NewNetwork\Highway2L\Highway2LBuilder.cs" />
-    <Compile Include="OldModBehaviour.cs" />
     <Compile Include="Framework\Debug.cs" />
     <Compile Include="Framework\Extensions\NetInfoExtensions.cs" />
     <Compile Include="Framework\Extensions\TypeExtensions.cs" />
@@ -82,18 +81,6 @@
     <Compile Include="NewNetwork\Highway6L\Highway6LBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CompatibilityTests\SomeRoads\planning_road_2_lanes.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="CompatibilityTests\SomeRoads\play_street.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="CompatibilityTests\SomeRoads\road_small.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="CompatibilityTests\SomeRoads\thumbnail_atlas.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="NewNetwork\Highway1L\Textures\Ground_Node__AlphaMap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -219,6 +206,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="NewNetwork\Highway1L\Textures\Ground_Segment.psd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CompatibilityTests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
