--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -81,10 +81,11 @@
     <Compile Include="NewNetwork\Highway6L\Highway6LBuilder.cs" />
     <Compile Include="SomeNetwork\PlanningRoadLargeBuilder.cs" />
     <Compile Include="SomeNetwork\PlanningRoadSmallBuilder.cs" />
-    <Compile Include="SomeNetwork\DarkBasicRoadBuilder.cs" />
-    <Compile Include="SomeNetwork\SomeRoads.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="NewNetwork\Highway1L\infotooltip.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewNetwork\Highway1L\Textures\Ground_Node__AlphaMap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -92,6 +93,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="NewNetwork\Highway1L\Textures\Ground_Segment__MainTex.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\Highway1L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="NewNetwork\Highway2L\infotooltip.png">
@@ -205,20 +209,8 @@
     <Content Include="NewNetwork\Highway6L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\planning_road_2_lanes.png" />
-    <Content Include="NewNetwork\play_street.png" />
-    <Content Include="SomeNetwork\Textures\planning_road_2_lanes.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SomeNetwork\Textures\play_street.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SomeNetwork\Textures\road_small.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="SomeNetwork\thumbnail_atlas.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="SomeNetwork\Textures\planning_road_2_lanes.png" />
+    <Content Include="SomeNetwork\thumbnail_atlas.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="NewNetwork\Highway1L\Textures\Ground_Segment.psd" />
