--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Framework\INetInfoBuilder.cs" />
     <Compile Include="Framework\Extensions\LocaleExtensions.cs" />
     <Compile Include="NewNetwork\Highway1L\Highway1LBuilder.cs" />
-    <Compile Include="NewNetwork\SmallRoad4L\SmallRoad4LBuilder.cs" />
+    <Compile Include="NewNetwork\SmallAvenue4L\SmallRoad4LBuilder.cs" />
     <Compile Include="NewNetwork\HighwayHelper.cs" />
     <Compile Include="NewNetwork\OneWay4L\OneWay4LBuilder.cs" />
     <Compile Include="NewNetwork\Highway2L\Highway2LBuilder.cs" />
@@ -209,10 +209,10 @@
     <Content Include="NewNetwork\Highway6L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\SmallRoad4L\Textures\Ground_Segment__AlphaMap.png">
+    <Content Include="NewNetwork\SmallAvenue4L\Textures\Ground_Segment__AlphaMap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\SmallRoad4L\Textures\Ground_Segment__MainTex.png">
+    <Content Include="NewNetwork\SmallAvenue4L\Textures\Ground_Segment__MainTex.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="SomeNetwork\Textures\planning_road_2_lanes.png" />
