Settings initial push

--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -52,6 +52,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs" />
+    <Compile Include="Framework\INExtModPart.cs" />
+    <Compile Include="Framework\NExtModPart.cs" />
+    <Compile Include="Mod.Settings.cs" />
     <Compile Include="Mod.Loading.cs" />
     <Compile Include="Framework\INetInfoModifier.cs" />
     <Compile Include="Framework\Extensions\EnumExtensions.cs" />
