--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -74,6 +74,9 @@
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LSegmentModel.cs" />
     <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LNodeModel.cs" />
     <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LSegmentModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LNodeModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LSegmentModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\OneWay1LBuilder.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LNodeModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LSegmentModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\SmallAvenue4LBuilder.cs" />
@@ -218,6 +221,10 @@
     <Content Include="NewNetwork\Highway6L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="NewNetwork\OneWay1L\infotooltip.png" />
+    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__AlphaMap.png" />
+    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__MainTex.png" />
+    <Content Include="NewNetwork\OneWay1L\thumbnails.png" />
     <Content Include="NewNetwork\SmallAvenue4L\infotooltip.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
