--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -74,6 +74,9 @@
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LSegmentModel.cs" />
     <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LNodeModel.cs" />
     <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LSegmentModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LNodeModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\Meshes\OneWay1LSegmentModel.cs" />
+    <Compile Include="NewNetwork\OneWay1L\OneWay1LBuilder.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LNodeModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LSegmentModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\SmallAvenue4LBuilder.cs" />
@@ -235,6 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CompatibilityTests\" />
+    <Folder Include="NewNetwork\OneWay1L\Textures\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
