--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -72,8 +72,8 @@
     <Compile Include="NewNetwork\Highway1L\Highway1LBuilder.cs" />
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LNodeModel.cs" />
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LSegmentModel.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LNodeModel.cs" />
-    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LSegmentModel.cs" />
+    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LModel.Transition.cs" />
+    <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LNodeModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\Meshes\SmallAvenue4LSegmentModel.cs" />
     <Compile Include="NewNetwork\SmallAvenue4L\SmallAvenue4LBuilder.cs" />
@@ -238,13 +238,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rd /s /q  "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-mkdir "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-rd /s /q  "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(ProjectName)"
-rd /s /q  "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
-mkdir "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"
-xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "C:\Program Files (x86)\Steam\SteamApps\workshop\content\255710\478820060"</PostBuildEvent>
+    <PostBuildEvent>rd /s /q  "d:\jeux\Steam\SteamApps\workshop\content\255710\478820060"
+mkdir "d:\jeux\Steam\SteamApps\workshop\content\255710\478820060"
+xcopy /y /e "$(ProjectDir)bin\$(ConfigurationName)" "d:\jeux\Steam\SteamApps\workshop\content\255710\478820060"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
