--- a/NetworkExtensions.csproj
+++ b/NetworkExtensions.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Framework\INetInfoBuilder.cs" />
     <Compile Include="Framework\Extensions\LocaleExtensions.cs" />
     <Compile Include="NewNetwork\Highway1L\Highway1LBuilder.cs" />
+    <Compile Include="NewNetwork\Highway1L\Meshes\Highway1LNodeModel.cs" />
+    <Compile Include="NewNetwork\Highway1L\Meshes\Highway1LSegmentModel.cs" />
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LNodeModel.cs" />
     <Compile Include="NewNetwork\Highway2L\Meshes\Highway2LSegmentModel.cs" />
     <Compile Include="NewNetwork\Highway6L\Meshes\Highway6LNodeModel.cs" />
@@ -221,10 +223,18 @@
     <Content Include="NewNetwork\Highway6L\thumbnails.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="NewNetwork\OneWay1L\infotooltip.png" />
-    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__AlphaMap.png" />
-    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__MainTex.png" />
-    <Content Include="NewNetwork\OneWay1L\thumbnails.png" />
+    <Content Include="NewNetwork\OneWay1L\infotooltip.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__AlphaMap.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\OneWay1L\Textures\Ground_Segment__MainTex.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NewNetwork\OneWay1L\thumbnails.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NewNetwork\SmallAvenue4L\infotooltip.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
